--- a/app/globals.css
+++ b/app/globals.css
@@ -70,8 +70,7 @@ img {
 }
 
 .container {
-  max-width: 720px;
-  margin: 0 auto;
-  padding: 0 1.5rem;
+  max-width: 100%;
+  padding: 0 15%;
   flex: 1;
 }
